# snowintel

./: README.md  environment.yml  pyproject.toml
docs/: conf.py  index.rst
notebooks/: simple_map.ipynb  testing.ipynb
snowintel/: __init__.py  core.py  mapping.py  utils.py
