[project]
name = "snowintel"
version = "0.0.1"
description = "mini library for reading SNOTEL data"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["snotel", "snow", "water", "swe", "snopack"]
authors = [
  {email = "norlandrhagen@gmail.com"},
  {name = "Norland Raphael Hagen"}
]
dynamic = ["version"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]



[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov[all]"
]
docs = [
"sphinx",
"pydata-sphinx-theme"

]
geospatial = [
"geopandas",
"folium"
]

[project.urls]
repository = "https://github.com/norlandrhagen/snowintel"


[tool.black]
line-length = 100
target-version = ['py310']

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
fallback_version = "999"

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.pytest.ini_options]
console_output_style = "count"
addopts = "--cov=./ --cov-report=xml --cov-append --cov-report term-missing --verbose"

[tool.ruff]
line-length = 100
target-version = "py310"
builtins = ["ellipsis"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.isort]
known-first-party = ["snowintel"]
